Lavorator2/compiling_error.txt
/Users/denischiciudean/Desktop/Faculta/upm_map/Lavorator2/ex_3.cpp:69:3: error: no matching function for call to 'sort'
  std::sort(&persoane, persoane+n, acompare);
  ^~~~~~~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:4193:1: note: candidate template ignored: deduced conflicting types for parameter '_RandomAccessIterator' ('person *(*)[n]' vs. 'person **')
sort(_RandomAccessIterator __first, _RandomAccessIterator __last, _Compare __comp)
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:4232:1: note: candidate template ignored: could not match '__wrap_iter<type-parameter-0-0 *>' against 'person *(*)[n]'
sort(__wrap_iter<_Tp*> __first, __wrap_iter<_Tp*> __last, _Compare __comp)
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:4208:1: note: candidate function template not viable: requires 2 arguments, but 3 were provided
sort(_RandomAccessIterator __first, _RandomAccessIterator __last)
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:4216:1: note: candidate function template not viable: requires 2 arguments, but 3 were provided
sort(_Tp** __first, _Tp** __last)
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:4224:1: note: candidate function template not viable: requires 2 arguments, but 3 were provided
sort(__wrap_iter<_Tp*> __first, __wrap_iter<_Tp*> __last)
^
1 error generated.
